# devicehub

./: Dockerfile  README.md  docker-compose-api-tests.yaml  docker-compose-e2e-tests.yaml  docker-compose-macos.yaml  docker-compose-prod.yaml  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json
.github/workflows/: api_tests.yaml  build_checks.yaml  e2e_tests.yaml  lint_lib.yaml
doc/howto/: HowToUseDevicesForAppium.md
lib/cli/: index.js
lib/cli/doctor/: index.js
lib/cli/generate-fake-device/: index.js
lib/cli/generate-fake-group/: index.js
lib/cli/generate-fake-user/: index.js
lib/cli/generate-service-user/: index.js
lib/cli/groups-engine/: index.js
lib/db/: api.js  api.ts  index.js  index.ts  proxiedModel.ts  setup.js  setup.ts
lib/util/: apiutil.js  bundletool.js  datautil.js  deviceutil.js  devutil.js  devutil.ts  grouputil.js  grouputil.ts  ldaputil.js  lifecycle.js  lifecycle.ts  logger.ts  procutil.js  srv.ts  ttlset.ts  zmqutil.js  zmqutil.ts
lib/wire/: index.ts  messagestream.ts  router.ts  test.ts  transmanager.js  transmanager.ts  util.ts  wire.proto  wire.ts
test/api/: conftest.py  justfile  pyproject.toml  test_auth_middleware.py  test_autotest.py  test_devices.py  test_groups.py  test_teams.py  test_users.py
test/api/device-hub-client/: README.md  pyproject.toml
test/api/device-hub-client/device_hub_client/models/: device.py  get_devices_target.py
test/e2e/: Dockerfile  playwright.config.ts
ui/: .env.production  .env.staging  eslint.config.mjs  package-lock.json  package.json  vite.config.ts
(+308 files in other folders)
